@@ -5,9 +5,7 @@ _Comment=Install, remove and upgrade software packages
 Exec=synaptic
 Icon=synaptic
 Terminal=false
-MultipleArgs=false
 Type=Application
-Encoding=UTF-8
-Categories=PackageManager;System;Application
+Categories=PackageManager;System;
 X-KDE-SubstituteUID=true
-OnlyShowIn=KDE
+OnlyShowIn=KDE;
