@@ -5,8 +5,6 @@ _Comment=Install, remove and upgrade software packages
 Exec=gksu -u root /usr/sbin/synaptic
 Icon=synaptic.png
 Terminal=false
-MultipleArgs=false
 Type=Application
-Encoding=UTF-8
 Categories=PackageManager;GTK;System;Settings;
-NotShowIn=KDE
+NotShowIn=KDE;
