@@ -4,6 +4,10 @@ synaptic (0.62) unstable; urgency=low
   * debian/rules, debian/control:
     - use dh_icons and add appropriate b-d on debhelper
   * g++ 4.3 fixes (closes: #456044)
+  * desktop-file-validate does not complain anymore 
+    (LP: #33598)
+  * gtk/rgmainwindow.cc:
+    - wording fixes (thanks to Matthew Paul Thomas)
 
   [ Brian Murray ]
   * typo fixes (LP: #64482, LP: #157850)
